Contact and Follow drop down boxes are not aligned correctly

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -185,13 +185,15 @@ input.form-control, textarea.form-control { background-color: $color-grey-bg; }
 /* CONTACT & FOLLOW POPUP */
 #contact-popup, #follow-popup {
   color: #000;
-  width: 350px;
+  max-width: 350px;
+  width: calc(100% - 30px);
   position: fixed;
   top: 64px;
   left: 15px;
   background-color: $color-grey-bg;
   padding: 15px;
   z-index: 10;
+  display: none;
   -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.55);
   -moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 0.55);
   box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 0.55);
